Update 'backend-tests-go-faabgajg' component image to: quay.io/rhtap_qe/backend-tests-go-faabgajg:1a3813fa1853c0c25c67fb3e535a9152fba612d8@sha256:03d220a435a16cc40c418ac5b11f4bb250cb6b9af964c4476d14872401878765

--- a/components/backend-tests-go-faabgajg/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-faabgajg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-faabgajg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-faabgajg:1a3813fa1853c0c25c67fb3e535a9152fba612d8@sha256:03d220a435a16cc40c418ac5b11f4bb250cb6b9af964c4476d14872401878765
+          name: container-image
